--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <div class="melody">
-        <img src="./image.png" alt="">
+        <!-- <img src="./image.png" alt=""> -->
+        <img src="./hellokitty.png" alt="">
     </div>
     <div class="digital-clock">
         <?xml version="1.0"?><svg data-name="Layer 1" id="Layer_1" viewBox="0 0 32 32"
